--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Redirecting...</title>
+    <title>Email is validated. Relaunch to L4L soon</title>
     <script type="text/javascript">
         setTimeout(function() {
             console.log("line 7");
