--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
     </script>
 </head>
 <body>
-    <h1>Redirecting to the Lookout app...</h1>
+    <h1>Email is validated!</h1>
 </body>
 </html>
